# extract-facebook-ads

./: .env_exemple  README.md  facebook_glue.py  facebook_local.py  pyproject.toml
